build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:6: error: cannot find symbol
import com.google.ai.edge.litertlm.LlmInferenceSession;
                                  ^
  symbol:   class LlmInferenceSession
  location: package com.google.ai.edge.litertlm
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:7: error: package com.google.ai.edge.litertlm.LlmInferenceSession does not exist
import com.google.ai.edge.litertlm.LlmInferenceSession.LlmInferenceOptions;
                                                      ^
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:8: error: cannot find symbol
import com.google.ai.edge.litertlm.Model;
                                  ^
  symbol:   class Model
  location: package com.google.ai.edge.litertlm
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:19: error: cannot find symbol
    private LlmInferenceSession llmInferenceSession;
            ^
  symbol:   class LlmInferenceSession
  location: class LlmInferenceHelper
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:53: error: cannot find symbol
                LlmInferenceOptions options = LlmInferenceOptions.builder()
                ^
  symbol:   class LlmInferenceOptions
  location: class LlmInferenceHelper
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:53: error: cannot find symbol
                LlmInferenceOptions options = LlmInferenceOptions.builder()
                                              ^
  symbol:   variable LlmInferenceOptions
  location: class LlmInferenceHelper
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:61: error: cannot find symbol
                llmInferenceSession = LlmInferenceSession.create(options);
                                      ^
  symbol:   variable LlmInferenceSession
  location: class LlmInferenceHelper
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:88: error: package LlmInferenceSession does not exist
                llmInferenceSession.generateResponseAsync(prompt, new LlmInferenceSession.GenerateResponseCallback() {
                                                                                         ^
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:89: error: method does not override or implement a method from a supertype
                    @Override
                    ^
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:94: error: method does not override or implement a method from a supertype
                    @Override
                    ^
C:\Users\debas\Downloads\2510\VoskHindiTranscriber\app\src\main\java\com\example\voskhinditranscriber\LlmInferenceHelper.java:99: error: method does not override or implement a method from a supertype
                    @Override
                    ^
11 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.10.2/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
16 actionable tasks: 1 executed, 15 up-to-date
